# codex-history-transfer

./: .gitignore  BUILD_WINDOWS.md  LICENSE  README.md  RELEASE_NOTES.md  WINDOWS_PACKAGE_README.txt  codex-history-transfer-gui.spec  codex-history-transfer.spec  codex_history_transfer.py  codex_history_transfer_gui.py  pyproject.toml  run_gui.bat
