[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-history-transfer"
version = "0.1.0"
description = "Offline transfer tool for local Codex Desktop history."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex History Transfer Contributors" }
]
keywords = ["codex", "history", "migration", "desktop", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities"
]

[project.scripts]
codex-history-transfer = "codex_history_transfer:main"

[tool.setuptools]
py-modules = ["codex_history_transfer"]
